Deployment/Deployment/syseleven/qtlife/homepage.yml
apiVersion: v1
kind: Service
metadata:
    name: homepage
    namespace: nambaya
spec:
    selector:
        app: homepage
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
    # externalIPs:
    #     - 192.168.3.10
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: nambaya
spec:
  replicas: 1
  selector:
        matchLabels:
            app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
        io.kompose.service: homepage
    spec:
      containers:
      - name: homepage
        image: scr.syseleven.de/nambaya-stack-qtlife/homepage:v18.3
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        - containerPort: 9222
      imagePullSecrets:
          - name: syseleven-registry-secret
status: {}
