Deployment/Deployment/syseleven/qtlife/nambayauser.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nambayauser
    namespace: qtlife
spec:
    replicas: 1
    revisionHistoryLimit: 5
    selector:
        matchLabels:
            app: nambayauser
    template:
        metadata:
            labels:
                app: nambayauser
        spec:
            containers:
            - name: nambayauser
              image: scr.syseleven.de/nambaya-stack-qtlife/nambayauser:v19.7
              imagePullPolicy: "Always"
              ports:
                - containerPort: 80
              volumeMounts:
                - mountPath: /app/appsettings.json
                  name: config-volume
                  subPath: appsettings.json
                  readOnly: true
                - mountPath: /app/appsettings.Development.json
                  name: config-volume
                  subPath: appsettings.Development.json
                  readOnly: true
            volumes:
              - name: config-volume
                configMap:
                    name: nambayauser-config
            imagePullSecrets:
                - name: syseleven-registry-secret
---
apiVersion: v1
kind: Service
metadata:
    name: nambayauser
    namespace: qtlife  
spec:
    selector:
        app: nambayauser
    ports:
        - protocol: TCP
          port: 5007
          targetPort: 80
