Deployment/Deployment/syseleven/qtlife/presentation.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: presentation
  name: presentation
  namespace: qtlife
spec:
  ports:
  - name: "80"
    port: 8000
    targetPort: 80
  - name: "9222"
    port: 9222
    targetPort: 9222
  selector:
    io.kompose.service: presentation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: presentation
  name: presentation
  namespace: qtlife
spec:
  replicas: 1
  selector:
        matchLabels:
            app: presentation
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: presentation
        io.kompose.service: presentation
    spec:
      containers:
      - name: presentation
        image: scr.syseleven.de/nambaya-stack-qtlife/presentation:v19.7
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        - containerPort: 9222
        volumeMounts:
            - mountPath: /etc/nginx/conf.d/default.conf
              name: config-volume
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: presentation-config
      imagePullSecrets:
          - name: syseleven-registry-secret
status: {}
