Deployment/Deployment/syseleven/qtlife/rabbitmq.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq
spec:
    replicas: 1
    revisionHistoryLimit: 5
    selector:
        matchLabels:
            app: rabbitmq
    template:
        metadata:
            labels:
                app: rabbitmq
        spec:
            containers:
            - name: rabbitmq
              image: scr.syseleven.de/nambaya-stack-qtlife/rabbitmq:v3
              ports:
                - containerPort: 5672
                - containerPort: 15672
                - containerPort: 15671
              volumeMounts:
                - mountPath: /var/lib/rabbitmq
                  name: rabbitmq-claim0
                  subPath: rabbitmq
            volumes:
              - name: rabbitmq-claim0
                persistentVolumeClaim:
                   claimName: qtlife-pvc
            imagePullSecrets:
                - name: syseleven-registry-secret
---
apiVersion: v1
kind: Service
metadata:
    name: rabbitmq
spec:
    selector:
        app: rabbitmq
    ports:
      - name: "5672"
        port: 56072
        targetPort: 5672
      - name: "15672"
        port: 55673
        targetPort: 15672
    type: LoadBalancer
